Fix image floats to be visible.
Summary:
Image floats needed a width on them to be visible. Change from margin to padding to ensure proper spacing.

I split this off of D19037.

Test Plan: [[http://localhost:9000/article.html#content=%5B%7B%22content%22%3A%22%20%5B%5B%E2%98%83%20image%201%5D%5D%20Lorem%20ipsum%20dolor%20sit%20amet%2C%20consectetur%20adipiscing%20elit.%20Ego%20vero%20isti%2C%20inquam%2C%20permitto.%20Quid%20ait%20Aristoteles%20reliquique%20Platonis%20alumni%3F%20Mihi%20enim%20erit%20isdem%20istis%20fortasse%20iam%20utendum.%20Atqui%20reperies%2C%20inquit%2C%20in%20hoc%20quidem%20pertinacem%3B%20Sed%20tamen%20intellego%20quid%20velit.%20Quis%20enim%20confidit%20semper%20sibi%20illud%20stabile%20et%20firmum%20permansurum%2C%20quod%20fragile%20et%20caducum%20sit%3F%20Duo%20Reges%3A%20constructio%20interrete.%20Quamquam%20ab%20iis%20philosophiam%20et%20omnes%20ingenuas%20disciplinas%20habemus%3B%20Nemo%20igitur%20esse%20beatus%20potest.%20%5Cn%5CnAt%20ille%20pellit%2C%20qui%20permulcet%20sensum%20voluptate.%20Odium%20autem%20et%20invidiam%20facile%20vitabis.%20Nulla%20erit%20controversia.%20Sed%20plane%20dicit%20quod%20intellegit.%20Haec%20para%2Fdoca%20illi%2C%20nos%20admirabilia%20dicamus.%20Quid%20enim%20possumus%20hoc%20agere%20divinius%3F%20%5Cn%5CnQuarum%20ambarum%20rerum%20cum%20medicinam%20pollicetur%2C%20luxuriae%20licentiam%20pollicetur.%20At%20ille%20pellit%2C%20qui%20permulcet%20sensum%20voluptate.%20Venit%20ad%20extremum%3B%5Cn%5Cn%22%2C%22images%22%3A%7B%22https%3A%2F%2Fka-perseus-graphie.s3.amazonaws.com%2Fda8df81c78b22f5c69d477d8eabfb583968eaf84.png%22%3A%7B%22width%22%3A400%2C%22height%22%3A70%7D%2C%22https%3A%2F%2Fka-perseus-graphie.s3.amazonaws.com%2Fb59fc02ca1aae800977b8793ed22f647a1aa75ee.png%22%3A%7B%22width%22%3A425%2C%22height%22%3A150%7D%7D%2C%22widgets%22%3A%7B%22image%201%22%3A%7B%22type%22%3A%22image%22%2C%22alignment%22%3A%22float-left%22%2C%22graded%22%3Atrue%2C%22options%22%3A%7B%22title%22%3A%22%22%2C%22range%22%3A%5B%5B0%

--- a/stylesheets/exercise-content-package/articles.less
+++ b/stylesheets/exercise-content-package/articles.less
@@ -3,13 +3,15 @@
     .perseus-widget-container {
         &.widget-float-left {
             float: left;
-            margin-right: 1em;
-        }
+            padding-right: 1em;
+            max-width: 50%;
+            width: 100%;        }
 
         &.widget-float-right {
             float: right;
-            margin-left: 1em;
-        }
+            padding-left: 1em;
+            max-width: 50%;
+            width: 100%;        }
     }
 
     .perseus-renderer > .paragraph {
